<resources>
    <string name="app_name">LocalApiApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_information_account">Enter your information account</string>
    <string name="Login">Login</string>
    <string name="sign_in">Sign In</string>
</resources>