<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".security.LoginActivity">
    <TextView
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="50dp"
        android:textColor="@color/btn_color"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/test"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_information_account"
        android:textSize="15dp"
        android:textColor="@color/btn_color" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/btn_color"
        android:hint="@string/email"
        app:hintTextColor="@color/btn_color"
        app:helperTextTextColor="@color/red"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:counterEnabled="true"
        app:startIconTint="@color/btn_color"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:boxStrokeColor="@color/btn_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/btn_color"
        app:helperTextTextColor="@color/red"
        android:hint="@string/password"
        app:hintTextColor="@color/btn_color"
        android:layout_marginHorizontal="20dp"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        app:boxStrokeColor="@color/btn_color"
        android:layout_marginTop="20dp"
        app:counterMaxLength="8"
        app:startIconTint="@color/btn_color"
        app:passwordToggleTint="@color/btn_color"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="8"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="false"
        app:elevation="10dp"
        style="@style/btn"
        android:layout_marginHorizontal="20dp"
        android:text="@string/Login"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signIn"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="false"
        app:elevation="10dp"
        style="@style/btn"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_in"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/btn_color"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/btn_forgotPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/btn_color"
            android:textSize="15dp" />
    </RelativeLayout>
</LinearLayout>